CrateRow: Remove unused `info` CSS class assignment

--- a/app/components/crate-row.hbs
+++ b/app/components/crate-row.hbs
@@ -1,6 +1,6 @@
 <div class="crate row" data-test-crate-row ...attributes>
   <div local-class="description-box">
-    <div class='info'>
+    <div>
       <LinkTo
         @route="crate"
         @model={{this.crate.id}}
