--- a/app/components/crate-row.hbs
+++ b/app/components/crate-row.hbs
@@ -21,16 +21,16 @@
       {{ truncate-text this.crate.description }}
     </div>
   </div>
-  <div class='stats'>
-    <div class='downloads' data-test-downloads>
+  <div local-class='stats'>
+    <div local-class='downloads' data-test-downloads>
       {{svg-jar "download"}}
       <span class='num'><abbr title="Total number of downloads">All-Time:</abbr> {{ format-num this.crate.downloads }}</span>
     </div>
-    <div class="recent-downloads" data-test-recent-downloads>
+    <div local-class="recent-downloads" data-test-recent-downloads>
       {{svg-jar "download"}}
       <span class='num'><abbr title="Downloads in the last 90 days">Recent:</abbr> {{ format-num this.crate.recent_downloads }}</span>
     </div>
-    <div class="updated-at" >
+    <div local-class="updated-at" >
       {{svg-jar "latest-updates" height="32" width="32"}}
       <span>
         <abbr title="The last time crate was updated">Updated:</abbr>
