CrateRow: Extract `quick-links` CSS class

--- a/app/components/crate-row.hbs
+++ b/app/components/crate-row.hbs
@@ -40,7 +40,7 @@
       </span>
     </div>
   </div>
-  <div class="quick-links">
+  <div local-class="quick-links">
     <ul>
       {{#if this.crate.homepage}}
         <li><a href="{{this.crate.homepage}}">Homepage</a></li>
