--- a/app/components/crate-row.module.scss
+++ b/app/components/crate-row.module.scss
@@ -46,3 +46,25 @@
         padding: 10px;
     }
 }
+
+.quick-links {
+    ul {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+
+        font-size: 80%;
+        list-style-type: none;
+        margin: 1em 0 0 0;
+        padding: 0;
+
+
+        li {
+            margin-right: 1em;
+
+            &:last-child {
+                margin-right: 0;
+            }
+        }
+    }
+}
