--- a/app/styles/crate/version.module.scss
+++ b/app/styles/crate/version.module.scss
@@ -5,6 +5,26 @@
     top: 4px;
 }
 
+.quick-links {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    font-size: 80%;
+    list-style-type: none;
+    margin: 1em 0 0 0;
+    padding: 0;
+
+
+    li {
+        margin-right: 1em;
+
+        &:last-child {
+            margin-right: 0;
+        }
+    }
+}
+
 .crate-info {
     display: flex;
     flex-direction: column;
