CrateRow: Remove obsolete `crate` CSS class assignment

--- a/app/components/crate-row.hbs
+++ b/app/components/crate-row.hbs
@@ -1,4 +1,4 @@
-<div class="crate row" data-test-crate-row ...attributes>
+<div class="row" data-test-crate-row ...attributes>
   <div local-class="description-box">
     <div>
       <LinkTo
