CrateRow: Extract `crate-row` CSS class

--- a/app/components/crate-row.hbs
+++ b/app/components/crate-row.hbs
@@ -1,4 +1,4 @@
-<div class="row" data-test-crate-row ...attributes>
+<div local-class="crate-row" class="row" data-test-crate-row ...attributes>
   <div local-class="description-box">
     <div>
       <LinkTo
