--- a/app/templates/team.hbs
+++ b/app/templates/team.hbs
@@ -72,7 +72,7 @@
 
     <div class='white-rows'>
       {{#each this.model.crates as |crate|}}
-        <CrateRow @crate={{crate}} />
+        <CrateRow @crate={{crate}} class="row" />
       {{/each}}
     </div>
 
