--- a/app/templates/category/index.hbs
+++ b/app/templates/category/index.hbs
@@ -89,7 +89,7 @@
 
 <div class='white-rows'>
   {{#each this.model as |crate|}}
-    <CrateRow @crate={{crate}} />
+    <CrateRow @crate={{crate}} class="row" />
   {{/each}}
 </div>
 
