--- a/app/templates/crates.hbs
+++ b/app/templates/crates.hbs
@@ -77,7 +77,7 @@
 
 <div class='white-rows'>
   {{#each this.model as |crate index|}}
-    <CrateRow @crate={{crate}} data-test-crate-row={{index}} />
+    <CrateRow @crate={{crate}} class="row" data-test-crate-row={{index}} />
   {{/each}}
 </div>
 
