--- a/app/templates/me/crates.hbs
+++ b/app/templates/me/crates.hbs
@@ -58,7 +58,7 @@
 
 <div class='white-rows'>
   {{#each this.model as |crate|}}
-    <CrateRow @crate={{crate}} />
+    <CrateRow @crate={{crate}} class="row" />
   {{/each}}
 </div>
 
