--- a/app/templates/me/following.hbs
+++ b/app/templates/me/following.hbs
@@ -41,7 +41,7 @@
 
 <div class='white-rows'>
   {{#each this.model as |crate|}}
-    <CrateRow @crate={{crate}} />
+    <CrateRow @crate={{crate}} class="row" />
   {{/each}}
 </div>
 
