--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -63,7 +63,7 @@
 
     <div class='white-rows'>
       {{#each this.model.crates as |crate|}}
-        <CrateRow @crate={{crate}} />
+        <CrateRow @crate={{crate}} class="row" />
       {{/each}}
     </div>
 
