Remove unused `amt` CSS class assignment

--- a/app/templates/crate/reverse-dependencies.hbs
+++ b/app/templates/crate/reverse-dependencies.hbs
@@ -4,7 +4,7 @@
 
 <div id='results'>
   <div class='nav'>
-    <span class='amt'>
+    <span>
       Displaying
       <span class='cur'>{{ this.currentPageStart }}-{{ this.currentPageEnd }}</span>
       of <span class='total'>{{ this.totalItems }}</span> reverse dependencies
