--- a/app/templates/me/crates.hbs
+++ b/app/templates/me/crates.hbs
@@ -9,7 +9,7 @@
 
 <div id='results'>
   <div class='nav'>
-    <span class='amt small'>
+    <span class='small'>
       Displaying
       <span class='cur'>{{ this.currentPageStart }}-{{ this.currentPageEnd }}</span>
       of <span class='total'>{{ this.totalItems }}</span> total results
