--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -19,7 +19,7 @@
 {{else if this.hasItems}}
   <div id='results'>
     <div class='nav' data-test-search-nav>
-      <span class='amt'>
+      <span>
         Displaying
         <span class='cur'>{{ this.currentPageStart }}-{{ this.currentPageEnd }}</span>
           of <span class='total'>{{ this.totalItems }}</span> total results
