--- a/app/templates/category/index.hbs
+++ b/app/templates/category/index.hbs
@@ -40,7 +40,7 @@
 <h2>Crates</h2>
 <div id='results'>
   <div class='nav' data-test-category-nav>
-    <span class='amt small'>
+    <span class='small'>
       Displaying
       <span class='cur'>{{ this.currentPageStart }}-{{ this.currentPageEnd }}</span>
       of <span class='total'>{{ this.totalItems }}</span> total results
