--- a/app/templates/crates.hbs
+++ b/app/templates/crates.hbs
@@ -27,7 +27,7 @@
 
 <div id='results'>
   <div class='nav' data-test-crates-nav>
-    <span class='amt small'>
+    <span class='small'>
       Displaying
       <span class='cur' data-test-current-rows>{{ this.currentPageStart }}-{{ this.currentPageEnd }}</span>
       of <span class='total' data-test-total-rows>{{ this.totalItems }}</span> total results
