--- a/app/templates/crates.hbs
+++ b/app/templates/crates.hbs
@@ -26,13 +26,12 @@
 </div>
 
 <div id='results'>
-  <div class='nav' data-test-crates-nav>
-    <span class='small'>
-      Displaying
-      <span class='cur' data-test-current-rows>{{ this.currentPageStart }}-{{ this.currentPageEnd }}</span>
-      of <span class='total' data-test-total-rows>{{ this.totalItems }}</span> total results
-    </span>
-  </div>
+  <ResultsCount
+    @start={{this.currentPageStart}}
+    @end={{this.currentPageEnd}}
+    @total={{this.totalItems}}
+    data-test-crates-nav
+  />
 
   <div class='sort' data-test-crates-sort>
     <span class='small'>Sort by</span>
