crates: Move `selection` CSS class into CSS module

--- a/app/templates/crates.hbs
+++ b/app/templates/crates.hbs
@@ -10,7 +10,7 @@
   </h1>
 </div>
 
-<div id='selection'>
+<div local-class='selection'>
   {{#each this.alphabet as |letter|}}
     <LinkTo @query={{hash letter=letter page=1}}>
       {{ letter }}
