me: Move `me-profile` CSS classes into CSS module

--- a/app/styles/me/index.module.scss
+++ b/app/styles/me/index.module.scss
@@ -1,3 +1,28 @@
+.me-profile {
+    border-bottom: 5px solid $gray-border;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+
+    .info { display: flex; }
+    dl {
+        margin: 0 0 0 30px;
+        line-height: 150%;
+        font-size: 110%;
+        dt {
+            font-weight: bold;
+            width: 150px;
+            text-align: right;
+            float: left;
+            clear: both;
+        }
+        dd { float: left; margin-left: 10px; }
+    }
+
+    @media only screen and (max-width: 550px) {
+        .info img { display: none; }
+    }
+}
+
 .me-subheading {
     display: flex;
     .right {
