--- a/app/templates/me/index.hbs
+++ b/app/templates/me/index.hbs
@@ -5,10 +5,10 @@
   <h1>Account Settings</h1>
 </div>
 
-<div id='me-profile'>
+<div local-class='me-profile'>
   <h2>Profile Information</h2>
 
-  <div class='info'>
+  <div local-class='info'>
     <UserLink @user={{this.model.user}}> <UserAvatar @user={{this.model.user}} @size="medium" /> </UserLink>
 
     <dl>
