Remove unused `.small-text` CSS class assignments

--- a/app/templates/crate/owners.hbs
+++ b/app/templates/crate/owners.hbs
@@ -18,7 +18,7 @@
 
       {{#if this.error}}
         <div class='error'>
-          <p class='small-text error'>{{this.error}}</p>
+          <p class='error'>{{this.error}}</p>
         </div>
       {{/if}}
 
