crate.owners: Replace `add-owner` ID with test selector

--- a/app/templates/crate/owners.hbs
+++ b/app/templates/crate/owners.hbs
@@ -29,7 +29,7 @@
       {{/if}}
 
       <div class="actions">
-        <button id="add-owner" type="submit" class="small yellow-button space-right">Save</button>
+        <button type="submit" class="small yellow-button space-right" data-test-save-button>Save</button>
       </div>
     </form>
   </div>
