crate.owners: Extract `submit-button` CSS class

--- a/app/templates/crate/owners.hbs
+++ b/app/templates/crate/owners.hbs
@@ -29,7 +29,7 @@
       {{/if}}
 
       <div class="actions">
-        <button type="submit" class="small yellow-button space-right" data-test-save-button>Save</button>
+        <button type="submit" local-class="submit-button" data-test-save-button>Save</button>
       </div>
     </form>
   </div>
