--- a/app/styles/crate/owners.module.scss
+++ b/app/styles/crate/owners.module.scss
@@ -1,3 +1,8 @@
+.submit-button {
+    composes: small yellow-button from global;
+    margin-right: 10px;
+}
+
 .list {
     background-color: white;
     padding: 0 20px;
