--- a/app/templates/crate/owners.hbs
+++ b/app/templates/crate/owners.hbs
@@ -9,18 +9,16 @@
 <div id="me-email">
   <h2>Add Owner</h2>
 
+  {{#if this.error}}
+    <p data-test-error-message>{{this.error}}</p>
+  {{/if}}
+
   <div class="row">
     <form class="email-form" {{action 'addOwner' on='submit'}}>
       <label class="label" for='new-owner-username'>
         Username
       </label>
       <Input @type="text" id="new-owner-username" @value={{this.username}} placeholder="Username" class="form-control space-right" @name="username" />
-
-      {{#if this.error}}
-        <div class='error'>
-          <p class='error'>{{this.error}}</p>
-        </div>
-      {{/if}}
 
       {{#if this.invited}}
         <div class='invited'>
