crate.owners: Extract `email-input` CSS class

--- a/app/styles/crate/owners.module.scss
+++ b/app/styles/crate/owners.module.scss
@@ -1,3 +1,8 @@
+.email-input {
+    width: 400px;
+    margin-right: 10px;
+}
+
 .submit-button {
     composes: small yellow-button from global;
     margin-right: 10px;
