--- a/app/templates/crate/owners.hbs
+++ b/app/templates/crate/owners.hbs
@@ -22,7 +22,7 @@
       <label class="label" for='new-owner-username'>
         Username
       </label>
-      <Input @type="text" id="new-owner-username" @value={{this.username}} placeholder="Username" class="form-control space-right" @name="username" />
+      <Input @type="text" id="new-owner-username" @value={{this.username}} placeholder="Username" local-class="email-input" @name="username" />
 
       <div class="actions">
         <button type="submit" local-class="submit-button" data-test-save-button>Save</button>
