crate.owners: Extract `email-input-label` CSS class

--- a/app/styles/crate/owners.module.scss
+++ b/app/styles/crate/owners.module.scss
@@ -1,3 +1,8 @@
+.email-input-label {
+    font-weight: bold;
+    margin-right: 10px;
+}
+
 .email-input {
     width: 400px;
     margin-right: 10px;
