crate.owners: Extract `me-email` CSS class

--- a/app/styles/crate/owners.module.scss
+++ b/app/styles/crate/owners.module.scss
@@ -1,3 +1,9 @@
+.me-email {
+    border-bottom: 5px solid $gray-border;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+}
+
 .email-form {
     display: flex;
     justify-content: space-between;
