--- a/app/templates/crate/owners.hbs
+++ b/app/templates/crate/owners.hbs
@@ -6,7 +6,7 @@
   <h2>{{ this.crate.name }}</h2>
 </div>
 
-<div id="me-email">
+<div local-class="me-email">
   <h2>Add Owner</h2>
 
   {{#if this.error}}
