Remove unused `badge` CSS class assignments

--- a/app/components/badge-appveyor.hbs
+++ b/app/components/badge-appveyor.hbs
@@ -1,4 +1,4 @@
-<span class="badge" ...attributes>
+<span ...attributes>
   <a href="https://ci.appveyor.com/project/{{ this.projectName }}">
     <img
         src="{{ this.imageUrl }}"
@@ -7,5 +7,5 @@
         height="20"
         title="{{ this.text }}">
   </a>
-  
+
 </span>
