--- a/app/components/follow-button.hbs
+++ b/app/components/follow-button.hbs
@@ -1,4 +1,4 @@
-<button type="button" class='tan-button' {{on "click" (perform this.toggleFollowTask)}} data-test-follow-button>
+<button type="button" local-class="button" {{on "click" (perform this.toggleFollowTask)}} data-test-follow-button>
   {{#if (or this.followStateTask.isRunning this.toggleFollowTask.isRunning)}}
     <img src="/assets/ajax-loader.gif" data-test-spinner>
   {{else}}
