--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,12 +2,12 @@
   <h1>The Rust community&rsquo;s crate registry</h1>
 
   <div local-class='links'>
-    <a href="https://doc.rust-lang.org/cargo/getting-started/installation.html" class='yellow-button' data-test-install-cargo-link>
+    <a href="https://doc.rust-lang.org/cargo/getting-started/installation.html" local-class="hero-button" data-test-install-cargo-link>
       {{svg-jar "button-download"}}
       Install Cargo
     </a>
 
-    <a href='https://doc.rust-lang.org/cargo/guide/' class='yellow-button'>
+    <a href='https://doc.rust-lang.org/cargo/guide/' local-class="hero-button">
       {{svg-jar "flag"}}
       Getting Started
     </a>
