--- a/app/templates/crate/versions.hbs
+++ b/app/templates/crate/versions.hbs
@@ -4,8 +4,8 @@
 
 <div class='info'>
   <span class='small'>
-    All <span class='num'>{{ this.model.versions.length }}</span>
-    versions of <span class='num'>{{ this.model.name }}</span> since
+    All <strong>{{ this.model.versions.length }}</strong>
+    versions of <strong>{{ this.model.name }}</strong> since
     {{moment-format this.model.created_at 'LL'}}
   </span>
 </div>
