Move `yanked` CSS class into CSS module

--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -176,7 +176,7 @@
                 </LinkTo>
                 <span class='date'>{{moment-format version.created_at 'll'}}</span>
                 {{#if version.yanked}}
-                  <span class='yanked'>yanked</span>
+                  <span local-class='yanked'>yanked</span>
                 {{/if}}
               </li>
             {{/each}}
