--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -49,7 +49,7 @@ pre {
     font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
-button.dropdown, a.dropdown {
+button.dropdown {
     color: inherit;
     cursor: pointer;
     .arrow { font-size: 50%; display: inline-block; vertical-align: middle; }
