Dropdown::Trigger: Merge `.arrow` elements into component template

--- a/app/components/dropdown/trigger.hbs
+++ b/app/components/dropdown/trigger.hbs
@@ -1,1 +1,4 @@
-<button type="button" {{on "click" @toggle}} ...attributes>{{yield}}</button>
+<button type="button" {{on "click" @toggle}} ...attributes>
+  {{yield}}
+  <span class='arrow'></span>
+</button>
