Dropdown::Trigger: Use CSS module

--- a/app/components/dropdown/trigger.hbs
+++ b/app/components/dropdown/trigger.hbs
@@ -1,4 +1,4 @@
-<button type="button" {{on "click" @toggle}} ...attributes>
+<button type="button" local-class="button" {{on "click" @toggle}} ...attributes>
   {{yield}}
-  <span class='arrow'></span>
+  <span local-class="arrow"></span>
 </button>
